# ChangeLog for net-zope/zope-interface
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-interface/ChangeLog,v 1.10 2010/02/10 20:16:52 jer Exp $

  10 Feb 2010; Jeroen Roovers <jer@gentoo.org> zope-interface-3.5.3.ebuild:
  Stable for HPPA (bug #300248).

  07 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  zope-interface-3.5.3.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #300248

  03 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  zope-interface-3.5.3.ebuild:
  stable x86, bug 300248

  20 Jan 2010; Brent Baude <ranger@gentoo.org> zope-interface-3.5.3.ebuild:
  Marking zope-interface-3.5.3 ppc64 for bug 300248

  19 Jan 2010; nixnut <nixnut@gentoo.org> zope-interface-3.5.3.ebuild:
  ppc stable #300248

*zope-interface-3.5.3 (08 Dec 2009)

  08 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-interface-3.5.3.ebuild:
  Version bump.

  14 Oct 2009; Jeroen Roovers <jer@gentoo.org> zope-interface-3.5.2.ebuild:
  Stable for HPPA (bug #284992).

  05 Oct 2009; Raúl Porcel <armin76@gentoo.org>
  zope-interface-3.5.2.ebuild:
  ia64/s390/sh/sparc stable wrt #284992

  04 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zopeinterface-3.5.1.ebuild, -zopeinterface-3.5.2.ebuild,
  +zope-interface-3.5.1.ebuild, +zope-interface-3.5.2.ebuild:
  net-zope/zopeinterface renamed to net-zope/zope-interface.

  01 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  zopeinterface-3.5.2.ebuild:
  Stable on alpha, bug #284992

  27 Sep 2009; nixnut <nixnut@gentoo.org> zopeinterface-3.5.2.ebuild:
  ppc stable #284992

  18 Sep 2009; Markus Meier <maekke@gentoo.org> zopeinterface-3.5.2.ebuild:
  amd64/arm stable, bug #284992

  16 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  zopeinterface-3.5.2.ebuild:
  stable x86, bug 284992

  25 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  zopeinterface-3.5.2.ebuild:
  Set SUPPORT_PYTHON_ABIS.
