@@ -1,6 +1,6 @@
-DIST zope.interface-3.5.2.tar.gz 116215 RMD160 db246ffb78bf97ad00efd6d39a789dd3714de3b1 SHA1 85aacb9918e9855f3184ac3591533c2f241c35da SHA256 1d1c941bb8db438ee7a845874c7d2fdad10ef2674a953389030017cd55fb97c1
 DIST zope.interface-3.5.3.tar.gz 115571 RMD160 f10c9c778861521ef278811bac3f327fde0ac8cc SHA1 1dc22ad950d3763f0ba03d87b9d111594e4572b4 SHA256 3ebd70b329733571110dd35b1c6d9f071661fcc21aa169bdd9642bfa1b2e5939
-EBUILD zope-interface-3.5.2.ebuild 1019 RMD160 9996da0bdbcb8aa366f4b5692fd6ece7db412e5d SHA1 2ff008cdb680b22a0faeba1eb19bdb5ab6e5b046 SHA256 612b2282c4d1ef234f409671e7dc69519d0f12a11598e1049329b77137a27760
-EBUILD zope-interface-3.5.3.ebuild 1014 RMD160 4a94cf50eaed9b3da5e16d357ab760b5c1a4180f SHA1 4e8e02a025c8f2bf28a2d088d843834fbe5d64ef SHA256 4aa64fbed7913517247c338d9d974ad533102e0169c005811ae0d6b44632d4b3
-MISC ChangeLog 7026 RMD160 be2d5eab3ca5b9316622f94317d94f0ed0059618 SHA1 778c16110bbdd94ec0260433408b8e8647cdc63b SHA256 586e591a757df3bb1bc4a0e45bdf6cb2bafa36da116579a5279874890a26f28c
+DIST zope.interface-3.6.1.tar.gz 125264 RMD160 9ede91cb047d6473489b4e345536ed64e55d57be SHA1 3bdc444988064d035fb1a3195e336de6b446f0fa SHA256 294c3c0529e84169177bce78d616c768fa1c028a2fbc1854f615d32ed88dbc6c
+EBUILD zope-interface-3.5.3.ebuild 1019 RMD160 b264c0c2e5d78e79c539185f59d00227bf61d10f SHA1 1db5be939097c3ed03f9fe0ad75b77b5ccf44ad2 SHA256 d132075030e9cb836c245fe0444215a18250ff8648a28b02307c9f9ad65332ea
+EBUILD zope-interface-3.6.1.ebuild 1007 RMD160 7a98eaca08472522b53a667ef469ecd363c35301 SHA1 a60a37bbe7686d83e89bcfdfc165c848e7ea9679 SHA256 be07eef3cd4f682b0929930e5b323bc8df3a407db4c1717a71734a19a992d8c7
+MISC ChangeLog 7387 RMD160 4ef1e01a821a00d8def475573962ac53ed109b01 SHA1 20dd74e63caf2ceda30e06aa2d2936d2122523b3 SHA256 fb28ec3d03f49b7573dc43389ea1cf35aeca6842946e424737609b460d96b38d
 MISC metadata.xml 183 RMD160 0e2d86898897ee70cc1f6e9ceb76d00388d3b2fa SHA1 19635a9dfa15036e341a7cbdd8cbd018db62be82 SHA256 f480763451083d2f7be8fc23d38e02952ccc383b4cc65e103a9901a0907ce50d
