@@ -1,6 +1,17 @@
 # ChangeLog for net-zope/zope-interface
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-interface/ChangeLog,v 1.10 2010/02/10 20:16:52 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-interface/ChangeLog,v 1.12 2010/05/06 22:38:49 arfrever Exp $
+
+*zope-interface-3.6.1 (06 May 2010)
+
+  06 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -zope-interface-3.5.1.ebuild, -zope-interface-3.5.2.ebuild,
+  +zope-interface-3.6.1.ebuild:
+  Version bump.
+
+  29 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  zope-interface-3.5.3.ebuild:
+  amd64 stable (bug #300248).
 
   10 Feb 2010; Jeroen Roovers <jer@gentoo.org> zope-interface-3.5.3.ebuild:
   Stable for HPPA (bug #300248).
